# rusty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GOALS.md  README.md  docker-compose.yml
local/: issue.json  summary.txt
prompts/: spec_refiner.md
rusty-cli/: Cargo.toml
rusty-cli/src/: main.rs
rusty-core/: Cargo.toml
rusty-core/src/: grok_client.rs  lib.rs  logging.rs  repo_service.rs
rusty-core/src/tools/: executor.rs  file_system.rs  grep_search.rs  list_directory.rs  mod.rs  repo_overview.rs
