[package]
name = "rusty-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
octocrab = "0.49.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ignore = "0.4"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"  # optional for pretty-printing if you want
proc-macro2 = { version = "1.0", features = ["span-locations"] }